# Apollo

./: .gitmodules  CMakeLists.txt
data/: shader.vert
src/: Apollo.h  pch.h
src/Apollo/: Application.cpp  Application.h  Core.h  EntryPoint.h  Logger.cpp  Logger.h
src/Apollo/event/: EventSystem.cpp  EventSystem.h  IEvents.h
src/Apollo/input/: InputEvents.h
src/Apollo/render/: IRenderable.h
src/Apollo/window/: Events.h  Window.cpp  Window.h
src/Grawler/: CMakeLists.txt  Grawler.cpp  Grawler.h
